# PySWATPlus

./: .gitignore  CLAUDE.md  CLAUDE.md.backup  LICENSE  README.md  pyproject.toml
.agents/agents/: citation-verifier.md  figure-maker.md  manuscript-editor.md  pdf-reader.md  session-manager.md  ultra-thinker.md  writing-reviewer.md
.agents/agents/domain-reviewers/: TEMPLATE.md  drought-reviewer.md  hydrology-reviewer.md
.agents/departments/data-science/: DEPARTMENT.md  data-analyst.md
.agents/departments/domain-expertise/: DEPARTMENT.md  TEMPLATE.md  hydrology-expert.md
.agents/departments/operations/: DEPARTMENT.md  session-manager.md
.agents/departments/quality-assurance/: DEPARTMENT.md  citation-verifier.md  methodology-auditor.md  scientific-reviewer.md
.agents/departments/research/: DEPARTMENT.md  pdf-reader.md  research-scout.md
.agents/departments/writing/: DEPARTMENT.md  manuscript-writer.md  technical-editor.md
.agents/instructions/: project-context.md  session-log.md
.agents/protocols/: communication.md  escalation.md  learning.md  quality-gates.md
.agents/teams/: deep-research-team.md  full-verification-team.md  pre-submission-review-team.md  writing-review-team.md
.agents/workflows/: brainstorm-session.md  deep-research-pipeline.md  manuscript-pipeline.md  post-mortem.md  triple-check-protocol.md  verification-pipeline.md
.github/workflows/: ci.yml  daily-update.yml
docs/: benchmark-history.csv  benchmarks.md
scripts/: daily_update.py
src/pyswatplus/: __init__.py
tests/: test_dds.py  test_objective.py  test_validation.py
(+17 files in other folders)
