[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyswatplus"
version = "0.2.0"
description = "SWAT+ watershed model calibration, sensitivity analysis & validation toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sebastian R.O. Marshall", email = "xec3cr@virginia.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
all = ["streamlit>=1.28", "matplotlib>=3.7", "plotly>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
